--- a/src/css/_theme-tokens.scss
+++ b/src/css/_theme-tokens.scss
@@ -20,6 +20,6 @@
   --highlight-hover-color: #512317;
 
   /* sitewide gradient */
-  --top-gradient: linear-gradient(#fbefe0, #fff 30%);
+  --top-gradient: linear-gradient(#fbefe0, #fff 600px);
 }
 
